--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,10 +23,12 @@
     "@sentry/nextjs": "^7.64.0",
     "@superscale/convex": "workspace:^",
     "@superscale/crud": "workspace:^",
+    "@superscale/editor": "workspace:^",
     "@superscale/email": "workspace:^",
     "@superscale/lib": "workspace:^",
     "@superscale/trpc": "workspace:^",
     "@superscale/tsconfig": "workspace:^",
+    "@superscale/ui": "workspace:^",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.35.3",
@@ -61,6 +63,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@superscale/twconfig": "workspace:^",
     "@svgr/webpack": "^8.1.0",
     "@types/classnames": "^2.3.1",
     "encoding": "^0.1.13",
