--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
       "next": "14.2.3",
       "react": "18.2.0",
       "@types/react": "18.2.20",
-      "@types/react-dom": "18.2.7"
+      "@types/react-dom": "18.2.7",
+      "typescript": "5.1.6",
+      "tailwindcss": "3.3.3"
     }
   }
 }
