--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
       "@types/react": "18.2.20",
       "@types/react-dom": "18.2.7",
       "typescript": "5.1.6",
-      "tailwindcss": "3.3.3"
+      "tailwindcss": "3.3.3",
+      "@ai-sdk/openai": "^0.0.31",
+      "@ai-sdk/react": "^0.0.3",
+      "ai": "^3.1.37"
     }
   }
 }
