--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -12,6 +12,8 @@
   "author": "iantanwx@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.31",
+    "@ai-sdk/react": "^0.0.3",
     "@superscale/ui": "workspace:^",
     "@tiptap/core": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
@@ -19,6 +21,7 @@
     "@tiptap/starter-kit": "^2.4.0",
     "@tiptap/suggestion": "^2.4.0",
     "add": "^2.0.6",
+    "ai": "^3.1.37",
     "fzf": "^0.5.2",
     "prosemirror-markdown": "^1.13.0",
     "react": "18.2.0",
@@ -27,8 +30,10 @@
   },
   "devDependencies": {
     "@superscale/tsconfig": "workspace:^",
+    "@superscale/twconfig": "workspace:^",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
 }
