feat: make prompt node swappable

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -16,6 +16,17 @@
     "@ai-sdk/react": "^0.0.3",
     "@superscale/ui": "workspace:^",
     "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-bold": "^2.4.0",
+    "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-dropcursor": "^2.4.0",
+    "@tiptap/extension-gapcursor": "^2.4.0",
+    "@tiptap/extension-hard-break": "^2.4.0",
+    "@tiptap/extension-heading": "^2.4.0",
+    "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-list-item": "^2.4.0",
+    "@tiptap/extension-ordered-list": "^2.4.0",
+    "@tiptap/extension-text": "^2.4.0",
+    "@tiptap/extension-underline": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
@@ -24,6 +35,9 @@
     "ai": "^3.1.37",
     "fzf": "^0.5.2",
     "prosemirror-markdown": "^1.13.0",
+    "prosemirror-model": "^1.21.1",
+    "prosemirror-state": "^1.4.3",
+    "prosemirror-view": "^1.33.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tippy": "^0.0.0"
