fix: ul + draggable interaction

--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -16,8 +16,10 @@
     "@ai-sdk/react": "^0.0.3",
     "@superscale/ui": "workspace:^",
     "@tiptap/core": "^2.4.0",
+    "@tiptap/extension-blockquote": "^2.4.0",
     "@tiptap/extension-bold": "^2.4.0",
     "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-code-block": "^2.4.0",
     "@tiptap/extension-dropcursor": "^2.4.0",
     "@tiptap/extension-gapcursor": "^2.4.0",
     "@tiptap/extension-hard-break": "^2.4.0",
@@ -26,6 +28,8 @@
     "@tiptap/extension-list-item": "^2.4.0",
     "@tiptap/extension-ordered-list": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
+    "@tiptap/extension-task-item": "^2.4.0",
+    "@tiptap/extension-task-list": "^2.4.0",
     "@tiptap/extension-text": "^2.4.0",
     "@tiptap/extension-underline": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
