--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -32,6 +32,7 @@
     "@tiptap/extension-task-list": "^2.4.0",
     "@tiptap/extension-text": "^2.4.0",
     "@tiptap/extension-underline": "^2.4.0",
+    "@tiptap/html": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
@@ -45,13 +46,15 @@
     "prosemirror-view": "^1.33.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tippy": "^0.0.0"
+    "tippy": "^0.0.0",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@superscale/tsconfig": "workspace:^",
     "@superscale/twconfig": "workspace:^",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/turndown": "^5.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
