--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -21,6 +21,7 @@
     "@tiptap/extension-bullet-list": "^2.4.0",
     "@tiptap/extension-code-block": "^2.4.0",
     "@tiptap/extension-dropcursor": "^2.4.0",
+    "@tiptap/extension-focus": "^2.4.0",
     "@tiptap/extension-gapcursor": "^2.4.0",
     "@tiptap/extension-hard-break": "^2.4.0",
     "@tiptap/extension-heading": "^2.4.0",
