--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/openai": "^0.0.31",
     "@ai-sdk/react": "^0.0.3",
     "@superscale/ui": "workspace:^",
+    "@tiptap-pro/extension-unique-id": "^2.8.9",
     "@tiptap/core": "^2.4.0",
     "@tiptap/extension-blockquote": "^2.4.0",
     "@tiptap/extension-bold": "^2.4.0",
@@ -48,7 +49,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tippy": "^0.0.0",
-    "turndown": "^7.2.0"
+    "turndown": "^7.2.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@superscale/tsconfig": "workspace:^",
@@ -56,6 +58,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/turndown": "^5.0.4",
+    "@types/uuid": "^10.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
