--- a/packages/tsconfig/base.tsconfig.json
+++ b/packages/tsconfig/base.tsconfig.json
@@ -7,6 +7,7 @@
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "downlevelIteration": true,
     "inlineSources": false,
     "isolatedModules": true,
     "moduleResolution": "NodeNext",
