--- a/packages/tsconfig/base.tsconfig.json
+++ b/packages/tsconfig/base.tsconfig.json
@@ -2,22 +2,23 @@
   "$schema": "https://json.schemastore.org/tsconfig",
   "display": "Default",
   "compilerOptions": {
+    "alwaysStrict": true,
     "composite": false,
     "declaration": true,
     "declarationMap": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "downlevelIteration": true,
     "inlineSources": false,
     "isolatedModules": true,
-    "moduleResolution": "NodeNext",
-    "module": "NodeNext",
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "preserveWatchOutput": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "target": "ES2018"
   },
+  "include": ["**/*.ts", "**/*.tsx", "**/.d.ts"],
   "exclude": ["node_modules"]
 }
