--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -11,8 +11,8 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/atoms"
+    "components": "#/components",
+    "utils": "#/lib/utils",
+    "ui": "#/atoms"
   }
 }
