--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,37 +1,27 @@
 {
-  "extends": "@superscale/tsconfig/base.tsconfig.json",
+  "extends": "@superscale/tsconfig/next.tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "target": "es5",
-    "declaration": false,
-    "declarationMap": false,
-    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "strictNullChecks": true,
-    "incremental": true,
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
+      "~/*": ["./src/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
-    }
+    },
+    "strictNullChecks": true,
+    "incremental": false
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
+    "**/*.d.ts",
     ".next/types/**/*.ts",
-    "./.contentlayer/generated"
+    ".contentlayer/generated"
   ],
   "exclude": ["node_modules"]
 }
