--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
       "react": "18.2.0",
       "@types/react": "18.2.20",
       "@types/react-dom": "18.2.7",
-      "typescript": "5.1.6",
+      "typescript": "5.5.2",
       "tailwindcss": "3.3.3",
       "@ai-sdk/openai": "^0.0.31",
       "@ai-sdk/react": "^0.0.3",
-      "ai": "^3.1.37"
+      "ai": "^3.1.37",
+      "zod": "^3.22.4",
+      "react-hook-form": "^7.46.1",
+      "@hookform/resolvers": "^3.3.1"
     }
   }
 }
