--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.31",
     "@ai-sdk/react": "^0.0.3",
+    "@hookform/resolvers": "^3.3.1",
     "@superscale/ui": "workspace:^",
     "@tiptap-pro/extension-unique-id": "^2.8.9",
     "@tiptap/core": "^2.4.0",
@@ -27,6 +28,7 @@
     "@tiptap/extension-hard-break": "^2.4.0",
     "@tiptap/extension-heading": "^2.4.0",
     "@tiptap/extension-italic": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
     "@tiptap/extension-list-item": "^2.4.0",
     "@tiptap/extension-ordered-list": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
@@ -42,24 +44,28 @@
     "add": "^2.0.6",
     "ai": "^3.1.37",
     "fzf": "^0.5.2",
+    "jotai": "^2.8.3",
     "prosemirror-markdown": "^1.13.0",
     "prosemirror-model": "^1.21.1",
     "prosemirror-state": "^1.4.3",
     "prosemirror-view": "^1.33.8",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "tippy": "^0.0.0",
     "turndown": "^7.2.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@superscale/tsconfig": "workspace:^",
     "@superscale/twconfig": "workspace:^",
+    "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@types/turndown": "^5.0.4",
     "@types/uuid": "^10.0.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.5.2"
   }
 }
