--- a/packages/tsconfig/next.tsconfig.json
+++ b/packages/tsconfig/next.tsconfig.json
@@ -1,15 +1,24 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Library",
+  "display": "Next.js",
   "extends": "./base.tsconfig.json",
   "compilerOptions": {
-    "alwaysStrict": true,
+    "incremental": true,
     "jsx": "preserve",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
     "noEmit": true,
     "declaration": false,
     "declarationMap": false,
+    "strict": true,
+    "useUnknownInCatchVariables": false,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "resolveJsonModule": true
-  }
+  },
+  "include": ["next-env.d.ts", "**/*.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
 }
