--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,12 +3,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "allowJs": true,
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    // "paths": {
+    //   "#/*": ["./src/*"]
+    // }
   },
-  "include": ["./**/*.ts", "./**/*.tsx", "tailwind.config.mts"],
+  "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
 }
