feat: link bubble menu

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,9 +3,9 @@
   "compilerOptions": {
     "baseUrl": ".",
     "allowJs": true,
-    // "paths": {
-    //   "#/*": ["./src/*"]
-    // }
+    "paths": {
+      "#*": ["./src/*"]
+    }
   },
   "include": ["."],
   "exclude": ["dist", "build", "node_modules"]
