--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -21,6 +21,7 @@
     "@tiptap/extension-blockquote": "^2.4.0",
     "@tiptap/extension-bold": "^2.4.0",
     "@tiptap/extension-bullet-list": "^2.4.0",
+    "@tiptap/extension-code": "^2.4.0",
     "@tiptap/extension-code-block": "^2.4.0",
     "@tiptap/extension-dropcursor": "^2.4.0",
     "@tiptap/extension-focus": "^2.4.0",
