--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -16,6 +16,7 @@
     "@ai-sdk/react": "^0.0.3",
     "@hookform/resolvers": "^3.3.1",
     "@superscale/ui": "workspace:^",
+    "@superscale/lib": "workspace:^",
     "@tiptap-pro/extension-unique-id": "^2.8.9",
     "@tiptap/core": "^2.4.0",
     "@tiptap/extension-blockquote": "^2.4.0",
