--- a/package.json
+++ b/package.json
@@ -18,9 +18,6 @@
     "apps/*",
     "packages/*"
   ],
-  "dependencies": {
-    "prettier": "^3.0.1"
-  },
   "pnpm": {
     "overrides": {
       "next": "14.2.3",
@@ -36,5 +33,8 @@
       "react-hook-form": "^7.46.1",
       "@hookform/resolvers": "^3.3.1"
     }
+  },
+  "devDependencies": {
+    "prettier": "^3.0.1"
   }
 }
