--- a/package.json
+++ b/package.json
@@ -35,6 +35,9 @@
     }
   },
   "devDependencies": {
-    "prettier": "^3.0.1"
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "prettier": "^3.0.1",
+    "prettier-plugin-sql": "^0.18.0",
+    "prettier-plugin-tailwindcss": "^0.5.2"
   }
 }
