--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -18,6 +18,7 @@
     "@hookform/resolvers": "^3.3.1",
     "@superscale/lib": "workspace:^",
     "@superscale/ui": "workspace:^",
+    "@tiptap-pro/extension-unique-id": "^2.9.3",
     "@tiptap/core": "^2.4.0",
     "@tiptap/extension-blockquote": "^2.4.0",
     "@tiptap/extension-bold": "^2.4.0",
