--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,15 +11,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
-    "@radix-ui/react-avatar": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-progress": "^1.0.3",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.4",
     "@sentry/nextjs": "^7.64.0",
     "@superscale/convex": "workspace:^",
     "@superscale/crud": "workspace:^",
@@ -30,33 +30,30 @@
     "@superscale/tsconfig": "workspace:^",
     "@superscale/ui": "workspace:^",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^4.32.6",
-    "@tanstack/react-query-devtools": "^4.35.3",
+    "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-query-devtools": "^5.62.8",
     "@tanstack/react-table": "^8.10.3",
     "@types/node": "20.4.9",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2",
     "@uidotdev/usehooks": "^2.3.0",
     "add": "^2.0.6",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.0.0",
-    "contentlayer": "^0.3.4",
     "date-fns": "^2.30.0",
     "lucide-react": "^0.263.1",
     "nanoid": "^5.0.1",
-    "next": "14.2.3",
+    "next": "15.1.2",
     "next-axiom": "^1.0.0-rc.1",
-    "next-contentlayer": "^0.3.4",
     "nodemailer": "^6.9.4",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.46.1",
     "react-use-wizard": "^2.2.3",
-    "resend": "^1.0.0",
     "superjson": "^1.13.1",
     "tailwind-merge": "^1.14.0",
     "typescript": "5.1.6",
@@ -65,10 +62,9 @@
   "devDependencies": {
     "@superscale/twconfig": "workspace:^",
     "@svgr/webpack": "^8.1.0",
-    "@types/classnames": "^2.3.1",
     "encoding": "^0.1.13",
     "eslint": "^8.46.0",
-    "eslint-config-next": "^13.4.13",
+    "eslint-config-next": "15.1.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "8.4.27",
     "prettier": "^3.0.1",
