--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
   },
   "pnpm": {
     "overrides": {
-      "next": "14.2.3",
-      "react": "18.2.0",
-      "@types/react": "18.2.20",
-      "@types/react-dom": "18.2.7",
+      "next": "15.1.2",
+      "react": "19.0.0",
+      "@types/react": "19.0.2",
+      "@types/react-dom": "19.0.2",
       "typescript": "5.1.6",
       "tailwindcss": "3.3.3"
     }
+  },
+  "devDependencies": {
+    "turbo": "^2.3.3"
   }
 }
