--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -23,7 +23,8 @@
     "prosemirror-markdown": "^1.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tippy": "^0.0.0"
+    "tippy": "^0.0.0",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@superscale/tsconfig": "workspace:^",
