--- a/packages/twconfig/package.json
+++ b/packages/twconfig/package.json
@@ -12,5 +12,9 @@
     "postcss": "8.4.27",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "dependencies": {
+    "@types/node": "20.4.9",
+    "typescript": "5.1.6"
   }
 }
