--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -28,9 +28,10 @@
     "@trpc/react-query": "11.0.0-rc.351",
     "@trpc/server": "11.0.0-rc.351",
     "@types/react": "18.2.20",
-    "convex": "^1.11.2",
+    "convex": "^1.17.4",
     "react": "18.2.0",
     "superjson": "^1.13.1",
+    "upgrade": "^1.1.0",
     "zod": "^3.22.2"
   }
 }
