--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -43,10 +43,12 @@
     "classnames": "^2.5.1",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.263.1",
     "nanoid": "^5.0.1",
     "next": "15.1.2",
     "next-axiom": "^1.0.0-rc.1",
+    "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.4",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
@@ -69,7 +71,7 @@
     "prettier-plugin-prisma": "^5.0.0",
     "prettier-plugin-tailwindcss": "^0.5.2",
     "rehype-autolink-headings": "^7.0.0",
-    "rehype-pretty-code": "^0.10.2",
+    "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
