--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -2,7 +2,7 @@
   "name": "@superscale/crud",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
+  "type": "esnext",
   "exports": {
     ".": "./src/index.ts",
     "./types": "./src/types.ts"
