--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@superscale/web",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "shadcn": "pnpm dlx shadcn@canary",
     "dev:email": "email dev --port 3001 --dir ./emails"
   },
   "dependencies": {
@@ -28,7 +30,7 @@
     "@superscale/lib": "workspace:^",
     "@superscale/trpc": "workspace:^",
     "@superscale/tsconfig": "workspace:^",
-    "@superscale/ui": "workspace:^",
+    "@superscale/ui": "workspace:*",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.62.8",
     "@tanstack/react-query-devtools": "^5.62.8",
@@ -62,6 +64,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@superscale/eslintconfig": "workspace:*",
     "@superscale/twconfig": "workspace:^",
     "@svgr/webpack": "^8.1.0",
     "encoding": "^0.1.13",
