--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,37 +1,23 @@
 {
-  "extends": "@superscale/tsconfig/base.tsconfig.json",
+  "extends": "@superscale/tsconfig/nextjs.tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "target": "es5",
-    "declaration": false,
-    "declarationMap": false,
-    "lib": ["dom", "dom.iterable", "esnext"],
-    "allowJs": true,
-    "noEmit": true,
-    "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "bundler",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "strictNullChecks": true,
-    "incremental": true,
+    "paths": {
+      "@/*": ["./src/*"],
+      "@superscale/ui/*": ["../../packages/ui/src/*"]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"],
-      "contentlayer/generated": ["./.contentlayer/generated"]
-    }
+    ]
   },
   "include": [
     "next-env.d.ts",
+    "next.config.mjs",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "./.contentlayer/generated"
+    ".next/types/**/*.ts"
   ],
   "exclude": ["node_modules"]
 }
