--- a/packages/ui/components.json
+++ b/packages/ui/components.json
@@ -1,18 +1,20 @@
 {
   "$schema": "https://ui.shadcn.com/schema.json",
-  "style": "default",
+  "style": "new-york",
   "rsc": true,
   "tsx": true,
   "tailwind": {
     "config": "tailwind.config.ts",
     "css": "src/styles/globals.css",
-    "baseColor": "slate",
-    "cssVariables": true,
-    "prefix": ""
+    "baseColor": "zinc",
+    "cssVariables": true
   },
+  "iconLibrary": "lucide",
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/atoms"
+    "components": "@superscale/ui/atoms",
+    "utils": "@superscale/ui/lib/utils",
+    "hooks": "@superscale/ui/hooks",
+    "lib": "@superscale/ui/lib",
+    "ui": "@superscale/ui/atoms"
   }
 }
