--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,7 @@
     "dev:email": "email dev --port 3001 --dir ./emails"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.1",
+    "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -22,7 +22,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
-    "@sentry/nextjs": "^7.64.0",
+    "@sentry/nextjs": "^7.120.2",
     "@superscale/convex": "workspace:^",
     "@superscale/crud": "workspace:^",
     "@superscale/editor": "workspace:^",
@@ -31,57 +31,57 @@
     "@superscale/trpc": "workspace:^",
     "@superscale/tsconfig": "workspace:^",
     "@superscale/ui": "workspace:*",
-    "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^5.62.8",
-    "@tanstack/react-query-devtools": "^5.62.8",
-    "@tanstack/react-table": "^8.10.3",
+    "@tanstack/react-query": "^5.62.15",
+    "@tanstack/react-query-devtools": "^5.62.15",
+    "@tanstack/react-table": "^8.20.6",
     "@types/node": "20.4.9",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
-    "@uidotdev/usehooks": "^2.3.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "add": "^2.0.6",
     "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.263.1",
-    "nanoid": "^5.0.1",
+    "nanoid": "^5.0.9",
     "next": "15.1.2",
-    "next-axiom": "^1.0.0-rc.1",
+    "next-axiom": "^1.9.1",
     "next-mdx-remote": "^5.0.0",
-    "nodemailer": "^6.9.4",
-    "pino": "^8.20.0",
-    "pino-pretty": "^11.0.0",
+    "nodemailer": "^6.9.16",
+    "pino": "^8.21.0",
+    "pino-pretty": "^11.3.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-hook-form": "^7.46.1",
-    "react-use-wizard": "^2.2.3",
-    "superjson": "^1.13.1",
+    "react-hook-form": "^7.54.2",
+    "react-use-wizard": "^2.3.0",
+    "superjson": "^1.13.3",
     "tailwind-merge": "^1.14.0",
     "typescript": "5.1.6",
-    "zod": "^3.22.2"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@superscale/eslintconfig": "workspace:*",
     "@superscale/twconfig": "workspace:^",
     "@svgr/webpack": "^8.1.0",
     "encoding": "^0.1.13",
-    "eslint-plugin-tailwindcss": "^3.13.0",
-    "postcss": "8.4.27",
-    "prettier": "^3.0.1",
+    "eslint-plugin-tailwindcss": "^3.17.5",
+    "postcss": "8.4.49",
+    "prettier": "^3.4.2",
     "prettier-plugin-prisma": "^5.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.2",
-    "rehype-autolink-headings": "^7.0.0",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-reading-time": "^2.0.1",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.1",
-    "tslib": "^2.6.2"
+    "@tailwindcss/typography": "^0.5.15",
+    "ts-node": "^10.9.2",
+    "tslib": "^2.8.1"
   }
 }
