--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
       "react": "19.0.0",
       "@types/react": "19.0.2",
       "@types/react-dom": "19.0.2",
-      "typescript": "5.1.6",
-      "tailwindcss": "3.3.3"
+      "typescript": "5.1.6"
     }
   },
   "packageManager": "pnpm@9.15.2",
