--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,6 @@
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
-    "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "dependencies": {
@@ -33,8 +32,11 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.263.1",
+    "postcss": "^8.4.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "3.4.17",
+    "@tailwindcss/typography": "^0.5.15",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   }
