--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,12 +5,30 @@
   "type": "module",
   "private": true,
   "exports": {
+    ".": "./src/index.ts",
     "./globals.css": "./src/styles/globals.css",
     "./postcss.config": "./postcss.config.mjs",
     "./tailwind.config": "./tailwind.config.ts",
     "./lib/*": "./src/lib/*.ts",
-    "./atoms/*": "./src/atoms/*.tsx",
-    "./hooks/*": "./src/hooks/*.ts"
+    "./hooks/*": "./src/hooks/*.ts",
+    "./components/avatar": "./src/components/avatar.tsx",
+    "./components/badge": "./src/components/badge.tsx",
+    "./components/button": "./src/components/button.tsx",
+    "./components/card": "./src/components/card.tsx",
+    "./components/dialog": "./src/components/dialog.tsx",
+    "./components/dropdown-menu": "./src/components/dropdown-menu.tsx",
+    "./components/form": "./src/components/form.tsx",
+    "./components/image": "./src/components/image.tsx",
+    "./components/input": "./src/components/input.tsx",
+    "./components/label": "./src/components/label.tsx",
+    "./components/progress": "./src/components/progress.tsx",
+    "./components/select": "./src/components/select.tsx",
+    "./components/separator": "./src/components/separator.tsx",
+    "./components/switch": "./src/components/switch.tsx",
+    "./components/table": "./src/components/table.tsx",
+    "./components/toast": "./src/components/toast.tsx",
+    "./components/toaster": "./src/components/toaster.tsx",
+    "./components/use-toast": "./src/components/use-toast.ts"
   },
   "scripts": {},
   "keywords": [],
@@ -25,16 +43,26 @@
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@superscale/eslintconfig": "workspace:^",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.263.1",
+    "next": "^15.1.2",
     "postcss": "^8.4.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.48.2",
+    "@hookform/resolvers": "^3.3.1",
     "tailwindcss": "3.4.17",
     "@tailwindcss/typography": "^0.5.15",
     "tailwind-merge": "^1.14.0",
