--- a/packages/crud/supabase/config.toml
+++ b/packages/crud/supabase/config.toml
@@ -1,6 +1,6 @@
 # A string used to distinguish different Supabase projects on the same host. Defaults to the
 # working directory name when running `supabase init`.
-project_id = "figai"
+project_id = "superscale"
 
 [api]
 enabled = true
@@ -102,11 +102,11 @@ enable_confirmations = true
 # subject = "You have been invited"
 # content_path = "./supabase/templates/invite.html"
 [auth.email.template.confirmation]
-subject = "Sign in to Figai"
+subject = "Sign in to Superscale"
 content_path = "./supabase/templates/confirmation.html"
 
 [auth.email.template.magic_link]
-subject = "Sign in to Figai"
+subject = "Sign in to Superscale"
 content_path = "./supabase/templates/magic_link.html"
 
 [auth.sms]
