--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,12 +30,12 @@
     "@superscale/trpc": "workspace:^",
     "@superscale/tsconfig": "workspace:^",
     "@superscale/ui": "workspace:*",
-    "@tanstack/react-query": "^5.62.15",
-    "@tanstack/react-query-devtools": "^5.62.15",
+    "@tanstack/react-query": "^5.84.0",
+    "@tanstack/react-query-devtools": "^5.84.0",
     "@tanstack/react-table": "^8.20.6",
-    "@types/node": "20.4.9",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "@uidotdev/usehooks": "^2.4.1",
     "add": "^2.0.6",
     "autoprefixer": "10.4.14",
@@ -46,7 +46,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.263.1",
     "nanoid": "^5.0.9",
-    "next": "15.1.2",
+    "next": "15.4.5",
     "next-axiom": "^1.9.1",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.16",
@@ -58,13 +58,14 @@
     "react-use-wizard": "^2.3.0",
     "superjson": "^1.13.3",
     "tailwind-merge": "^1.14.0",
-    "typescript": "5.1.6",
+    "typescript": "5.9.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@superscale/eslintconfig": "workspace:*",
     "@superscale/twconfig": "workspace:^",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/typography": "^0.5.15",
     "encoding": "^0.1.13",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "8.4.49",
@@ -79,7 +80,6 @@
     "remark-reading-time": "^2.0.1",
     "tailwindcss": "3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "@tailwindcss/typography": "^0.5.15",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1"
   }
