--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -21,11 +21,11 @@
     "@superscale/email": "workspace:^",
     "@superscale/lib": "workspace:^",
     "@superscale/tsconfig": "workspace:^",
-    "@tanstack/react-query": "^5.31.0",
-    "@trpc/client": "11.0.0-rc.351",
-    "@trpc/next": "11.0.0-rc.351",
-    "@trpc/react-query": "11.0.0-rc.351",
-    "@trpc/server": "11.0.0-rc.351",
+    "@tanstack/react-query": "^5.84.0",
+    "@trpc/client": "11.4.3",
+    "@trpc/next": "11.4.3",
+    "@trpc/react-query": "11.4.3",
+    "@trpc/server": "11.4.3",
     "@types/react": "18.2.20",
     "react": "18.2.0",
     "superjson": "^1.13.1",
