--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,9 +63,10 @@
   },
   "devDependencies": {
     "@superscale/eslintconfig": "workspace:*",
-    "@superscale/twconfig": "workspace:^",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/typography": "^0.5.15",
+    "@tailwindcss/vite": "^4.0.0",
     "encoding": "^0.1.13",
     "eslint-plugin-tailwindcss": "^3.17.5",
     "postcss": "8.4.49",
@@ -78,7 +79,7 @@
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-reading-time": "^2.0.1",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.0.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1"
