--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,15 +13,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.4",
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-progress": "^1.1.1",
-    "@radix-ui/react-select": "^2.1.4",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.4",
     "@sentry/nextjs": "^7.120.2",
     "@superscale/crud": "workspace:^",
     "@superscale/editor": "workspace:^",
@@ -33,54 +24,41 @@
     "@tanstack/react-query": "^5.84.0",
     "@tanstack/react-query-devtools": "^5.84.0",
     "@tanstack/react-table": "^8.20.6",
-    "@types/node": "^22.14.1",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
     "@uidotdev/usehooks": "^2.4.1",
     "add": "^2.0.6",
-    "autoprefixer": "10.4.14",
-    "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
-    "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
-    "lucide-react": "^0.263.1",
     "nanoid": "^5.0.9",
-    "next": "15.4.5",
+    "next": "catalog:",
     "next-axiom": "^1.9.1",
     "next-mdx-remote": "^5.0.0",
     "nodemailer": "^6.9.16",
     "pino": "^8.21.0",
     "pino-pretty": "^11.3.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hook-form": "^7.54.2",
+    "react": "catalog:",
+    "react-dom": "catalog:",
+    "react-hook-form": "catalog:",
     "react-use-wizard": "^2.3.0",
     "superjson": "^1.13.3",
-    "tailwind-merge": "^1.14.0",
-    "typescript": "5.9.2",
-    "zod": "^3.24.1"
+    "typescript": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@superscale/eslintconfig": "workspace:*",
     "@svgr/webpack": "^8.1.0",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@tailwindcss/typography": "^0.5.15",
-    "@tailwindcss/vite": "^4.0.0",
     "encoding": "^0.1.13",
-    "eslint-plugin-tailwindcss": "^3.17.5",
-    "postcss": "8.4.49",
-    "prettier": "^3.4.2",
+    "prettier": "catalog:",
     "prettier-plugin-prisma": "^5.0.0",
-    "prettier-plugin-tailwindcss": "^0.5.14",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.0",
     "rehype-slug": "^6.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-reading-time": "^2.0.1",
-    "tailwindcss": "4.0.0",
-    "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1"
   }
