--- a/packages/trpc/package.json
+++ b/packages/trpc/package.json
@@ -26,10 +26,10 @@
     "@trpc/next": "11.4.3",
     "@trpc/react-query": "11.4.3",
     "@trpc/server": "11.4.3",
-    "@types/react": "18.2.20",
-    "react": "18.2.0",
+    "@types/react": "catalog:",
+    "react": "catalog:",
     "superjson": "^1.13.1",
     "upgrade": "^1.1.0",
-    "zod": "^3.22.2"
+    "zod": "catalog:"
   }
 }
