--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -38,11 +38,11 @@
     "@superscale/tsconfig": "workspace:^",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.0.0",
-    "@types/node": "20.4.9",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "tailwindcss": "4.0.0",
-    "typescript": "5.1.6"
+    "@types/node": "catalog:",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:",
+    "tailwindcss": "catalog:",
+    "typescript": "catalog:"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -76,26 +76,26 @@
     "@superscale/eslintconfig": "workspace:^",
     "@tailwindcss/typography": "^0.5.15",
     "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "clsx": "catalog:",
     "cmdk": "^1.1.1",
     "date-fns": "^2.30.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.536.0",
-    "next": "^15.1.2",
+    "next": "catalog:",
     "next-themes": "^0.4.6",
-    "postcss": "^8.4.49",
-    "react": "18.2.0",
+    "postcss": "catalog:",
+    "react": "catalog:",
     "react-day-picker": "^9.8.1",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.62.0",
+    "react-dom": "catalog:",
+    "react-hook-form": "catalog:",
     "react-resizable-panels": "^3.0.4",
     "recharts": "2.15.4",
     "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "catalog:",
     "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.3.6",
     "vaul": "^1.1.2",
-    "zod": "^4.0.14"
+    "zod": "catalog:"
   }
 }
