chore: clean up package.json files

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -21,17 +21,19 @@
     "@superscale/trpc": "workspace:^",
     "@superscale/tsconfig": "workspace:^",
     "@superscale/ui": "workspace:*",
-    "@tanstack/react-query": "^5.84.0",
     "@tanstack/react-query-devtools": "^5.84.0",
+    "@tanstack/react-query": "catalog:",
     "@tanstack/react-table": "^8.20.6",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
     "@uidotdev/usehooks": "^2.4.1",
-    "add": "^2.0.6",
+    "class-variance-authority": "catalog:",
     "classnames": "^2.5.1",
-    "date-fns": "^2.30.0",
+    "clsx": "catalog:",
+    "date-fns": "catalog:",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.263.1",
     "nanoid": "^5.0.9",
     "next": "catalog:",
     "next-axiom": "^1.9.1",
@@ -44,11 +46,16 @@
     "react-hook-form": "catalog:",
     "react-use-wizard": "^2.3.0",
     "superjson": "^1.13.3",
+    "tailwind-merge": "catalog:",
     "typescript": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@superscale/eslintconfig": "workspace:*",
+    "eslint": "catalog:",
+    "eslint-config-next": "15.4.5",
+    "@typescript-eslint/eslint-plugin": "^8.15.0",
+    "@typescript-eslint/parser": "^8.15.0",
     "@svgr/webpack": "^8.1.0",
     "encoding": "^0.1.13",
     "prettier": "catalog:",
