--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -12,14 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "@react-email/components": "0.0.19",
-    "@superscale/tsconfig": "workspace:^",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "catalog:",
+    "react-dom": "catalog:",
     "react-email": "2.1.4",
     "resend": "^4.0.1"
   },
   "devDependencies": {
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2"
+    "@superscale/tsconfig": "workspace:^",
+    "@types/react": "catalog:",
+    "@types/react-dom": "catalog:"
   }
 }
