--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -22,10 +22,12 @@
     "@supabase/supabase-js": "^2.43.4",
     "@superscale/crud": "workspace:^",
     "@superscale/email": "workspace:^",
-    "@superscale/tsconfig": "workspace:^",
     "clsx": "catalog:",
     "next": "catalog:",
     "tailwind-merge": "catalog:",
     "zod": "catalog:"
+  },
+  "devDependencies": {
+    "@superscale/tsconfig": "workspace:^"
   }
 }
