--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -35,12 +35,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@superscale/eslintconfig": "workspace:^",
     "@superscale/tsconfig": "workspace:^",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.0.0",
     "@types/node": "catalog:",
     "@types/react": "catalog:",
     "@types/react-dom": "catalog:",
+    "postcss": "catalog:",
     "tailwindcss": "catalog:",
     "typescript": "catalog:"
   },
@@ -73,18 +75,16 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@superscale/eslintconfig": "workspace:^",
     "@tailwindcss/typography": "^0.5.15",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "catalog:",
     "clsx": "catalog:",
     "cmdk": "^1.1.1",
-    "date-fns": "^2.30.0",
+    "date-fns": "catalog:",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.536.0",
     "next": "catalog:",
     "next-themes": "^0.4.6",
-    "postcss": "catalog:",
     "react": "catalog:",
     "react-day-picker": "^9.8.1",
     "react-dom": "catalog:",
