--- a/packages/pglite/tsconfig.json
+++ b/packages/pglite/tsconfig.json
@@ -1,9 +1,15 @@
 {
   "extends": "@superscale/tsconfig/lib.tsconfig.json",
+  "compilerOptions": {
+    "lib": [
+      "ES2022",
+      "DOM",
+      "WebWorker"
+    ]
+  },
   "include": [
     "src/**/*.ts",
-    "src/**/*.tsx",
-    "drizzle.config.ts"
+    "scripts/**/*.ts"
   ],
   "exclude": [
     "node_modules"
