feat: minimally viable pglite setup

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "supabase:stop": "pnpm --filter=@superscale/crud supabase:stop",
     "supabase:db:push": "pnpm --filter=@superscale/crud supabase db push",
     "supabase:db:reset": "pnpm --filter=@superscale/crud supabase db reset",
+    "electric:up": "pnpm --filter=@superscale/crud electric:up",
+    "electric:down": "pnpm --filter=@superscale/crud electric:down",
+    "electric:logs": "pnpm --filter=@superscale/crud electric:logs",
     "build:web": "pnpm --filter=@superscale/web build",
     "test:integration": "pnpm --filter=@superscale/web test:integration",
     "lint": "biome check .",
