--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -11,6 +11,9 @@
     "supabase": "supabase",
     "supabase:start": "supabase start -x realtime,imgproxy,storage-api,edge-runtime,logflare",
     "supabase:stop": "supabase stop",
+    "electric:up": "docker-compose up -d",
+    "electric:down": "docker-compose down",
+    "electric:logs": "docker-compose logs -f electric",
     "drizzle": "drizzle-kit",
     "drizzle:gen": "drizzle-kit generate",
     "test": "vitest",
