--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,8 @@
     "@electric-sql/pglite-repl": "^0.2.25",
     "@hookform/resolvers": "^3.9.1",
     "@sentry/nextjs": "^7.120.2",
+    "@supabase/supabase-js": "catalog:",
+    "@superscale/zero": "workspace:^",
     "@superscale/crud": "workspace:^",
     "@superscale/editor": "workspace:^",
     "@superscale/email": "workspace:^",
