feat(zero): implement client mutators

--- a/packages/crud/package.json
+++ b/packages/crud/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "drizzle-orm": "catalog:",
-    "postgres": "^3.4.4"
+    "postgres": "^3.4.4",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@superscale/tsconfig": "workspace:^",
