--- a/packages/zero/package.json
+++ b/packages/zero/package.json
@@ -9,6 +9,7 @@
   },
   "type": "module",
   "scripts": {
+    "typecheck": "tsc --noEmit",
     "zero:start": "zero-cache-dev",
     "zero:generate": "drizzle-zero generate -s ../crud/src/db/schema.ts -o src/schema.gen.ts"
   },
@@ -19,7 +20,10 @@
     "@rocicorp/zero": "^0.22.2025080200",
     "@supabase/supabase-js": "catalog:",
     "@superscale/crud": "workspace:^",
+    "@superscale/lib": "workspace:^",
+    "drizzle-orm": "catalog:",
     "next": "catalog:",
+    "postgres": "^3.4.4",
     "react": "catalog:",
     "react-dom": "catalog:"
   },
