--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "test:integration": "vitest run tests/integration"
   },
   "dependencies": {
+    "@rocicorp/zero": "catalog:",
     "@electric-sql/pglite-react": "^0.2.25",
     "@electric-sql/pglite-repl": "^0.2.25",
     "@hookform/resolvers": "^3.9.1",
