--- a/packages/zero/.env.example
+++ b/packages/zero/.env.example
@@ -2,3 +2,4 @@
 ZERO_UPSTREAM_DB=postgresql://postgres:postgres@localhost:54322/postgres
 ZERO_REPLICA_FILE="/tmp/superscale.db"
 ZERO_AUTH_SECRET="super-secret-jwt-token-with-at-least-32-characters-long"
+ZERO_MUTATE_URL="http://localhost:3000/api/zero/push
