--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,11 +3,12 @@ packages:
   - packages/*
 
 catalog:
-  '@supabase/supabase-js': 2.54.0
-  '@tanstack/react-query': ^5.84.0
-  '@types/node': ^22.14.1
-  '@types/react': ^19.0.2
-  '@types/react-dom': ^19.0.2
+  "@supabase/supabase-js": 2.54.0
+  "@tanstack/react-query": ^5.84.0
+  "@types/node": ^22.14.1
+  "@types/react": ^19.0.2
+  "@types/react-dom": ^19.0.2
+  "@rocicorp/zero": ^0.22.2025080200
   autoprefixer: 10.4.14
   class-variance-authority: ^0.7.1
   clsx: ^2.1.1
